--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         "codeigniter4/framework": "^4.0"
     },
     "minimum-stability": "dev",
-    "prefer-stable": true,
+    "prefer-stable": false,
     "extra": {
         
     },
